@@ -1,1 +1,1 @@
-<pkgref spec="1.12" uuid="3F6840B1-53C2-4C3A-BD37-A49AFFC0F84B"><config><identifier>org.c-base.libavg.dist.pkg</identifier><version>1.5.0</version><description></description><post-install type="none"/><requireAuthorization/><installFrom mod="true">/Users/uzadow/devel/libavg/dist</installFrom><installTo mod="true">/Library/Python/2.6/site-packages/</installTo><flags><followSymbolicLinks/><discardResourceForks/><allowRevert/></flags><packageStore type="internal"></packageStore><mod>scripts.scriptsDirectoryPath.isAbsoluteType</mod><mod>scripts.scriptsDirectoryPath.isRelativeType</mod><mod>scripts.postflight.path</mod><mod>installTo</mod><mod>scripts.postinstall.path</mod><mod>scripts.postinstall.isRelativeType</mod><mod>version</mod><mod>parent</mod><mod>scripts.scriptsDirectoryPath.path</mod><mod>identifier</mod><mod>installFrom.path</mod><mod>installTo.path</mod></config><scripts><postflight mod="true">/Users/uzadow/libavg/libavg/mac/installscripts/postflight</postflight><scripts-dir mod="true">/Users/uzadow/devel/libavg/libavg/mac/installscripts</scripts-dir></scripts><contents><file-list>01dist-contents.xml</file-list><filter>/CVS$</filter><filter>/\.svn$</filter><filter>/\.cvsignore$</filter><filter>/\.cvspass$</filter><filter>/\.DS_Store$</filter></contents></pkgref>
+<pkgref spec="1.12" uuid="3F6840B1-53C2-4C3A-BD37-A49AFFC0F84B"><config><identifier>org.c-base.libavg.dist.pkg</identifier><version>1.5.1</version><description></description><post-install type="none"/><requireAuthorization/><installFrom mod="true">/Users/uzadow/devel/libavg/dist</installFrom><installTo mod="true">/Library/Python/2.6/site-packages/</installTo><flags><followSymbolicLinks/><discardResourceForks/><allowRevert/></flags><packageStore type="internal"></packageStore><mod>scripts.scriptsDirectoryPath.isAbsoluteType</mod><mod>scripts.scriptsDirectoryPath.isRelativeType</mod><mod>scripts.postflight.path</mod><mod>installTo</mod><mod>scripts.postinstall.path</mod><mod>scripts.postinstall.isRelativeType</mod><mod>version</mod><mod>parent</mod><mod>scripts.scriptsDirectoryPath.path</mod><mod>identifier</mod><mod>installFrom.path</mod><mod>installTo.path</mod></config><scripts><postflight mod="true">/Users/uzadow/libavg/libavg/mac/installscripts/postflight</postflight><scripts-dir mod="true">/Users/uzadow/devel/libavg/libavg/mac/installscripts</scripts-dir></scripts><contents><file-list>01dist-contents.xml</file-list><filter>/CVS$</filter><filter>/\.svn$</filter><filter>/\.cvsignore$</filter><filter>/\.cvspass$</filter><filter>/\.DS_Store$</filter></contents></pkgref>
