@@ -1,1 +1,1 @@
-<pkg-contents spec="1.12"><f n="bindist" o="uzadow" g="staff" p="16877" pt="/Users/uzadow/devel/libavg/bindist" m="false" t="file"><f n="avg_audioplayer.py" o="uzadow" g="staff" p="33261"/><f n="avg_chromakey.py" o="uzadow" g="staff" p="33261"/><f n="avg_showcamera.py" o="uzadow" g="staff" p="33261"/><f n="avg_showfile.py" o="uzadow" g="staff" p="33261"/><f n="avg_showfont.py" o="uzadow" g="staff" p="33261"/><f n="avg_videoinfo.py" o="uzadow" g="staff" p="33261"/><f n="avg_videoplayer.py" o="uzadow" g="staff" p="33261"/></f></pkg-contents>
+<pkg-contents spec="1.12"/>
